[tool.poetry]
name = "transit"
version = "0.1.0"
description = "An implementation of the Repository pattern for interacting with 3rd party systems."
authors = ["Joseph Corrado <josephcorrado7@gmail.com>"]
readme = "README.md"
packages = [
    { include = "transit" }
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pymilvus = "2.1.1" # downgraded 2.2.7 -> 2.1.1 to support grcpcio 1.54.0
requests = "^2.28.2"
loguru = "^0.7.0"
urllib3 = "^1.26.15"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
pre-commit = "^3.2.2"
commitizen = "^2.42.1"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
mypy = "^1.2.0"
pytest = "^7.3.1"
ipython = "^8.12.0"
jupyter = "^1.0.0"
grpcio = "^1.54.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
